[gd_scene load_steps=6 format=3 uid="uid://bs6rmsthfxt1i"]

[ext_resource type="Script" path="res://prog_93a.gd" id="1_yhgjv"]

[sub_resource type="LabelSettings" id="LabelSettings_nrula"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_g52bg"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_crlhf"]
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_efnye"]
font_size = 30

[node name="prog_93a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yhgjv")

[node name="txt_killowats" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 607.0
offset_top = -3.0
offset_right = 1029.0
offset_bottom = 106.0

[node name="lbl_killowats" type="Label" parent="."]
layout_mode = 0
offset_left = 5.0
offset_right = 516.0
offset_bottom = 114.0
text = "Killowats used:"
label_settings = SubResource("LabelSettings_nrula")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_amt_owed" type="Label" parent="."]
layout_mode = 0
offset_left = 315.0
offset_top = 195.0
offset_right = 623.0
offset_bottom = 284.0
text = "Amount owed:"
label_settings = SubResource("LabelSettings_g52bg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="amt_owed" type="Label" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 211.0
offset_right = 1139.0
offset_bottom = 300.0
label_settings = SubResource("LabelSettings_crlhf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_amt_owed_20th" type="Label" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 366.0
offset_right = 668.0
offset_bottom = 489.0
text = "amt owed after may 20th:"
label_settings = SubResource("LabelSettings_efnye")
horizontal_alignment = 1
vertical_alignment = 1

[node name="amt_owed2" type="Label" parent="."]
layout_mode = 0
offset_left = 701.0
offset_top = 374.0
offset_right = 1115.0
offset_bottom = 486.0
label_settings = SubResource("LabelSettings_crlhf")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn_calc" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 128.0
offset_right = 289.0
offset_bottom = 233.0
text = "Calculate
"

[node name="btn_clear" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 248.0
offset_right = 293.0
offset_bottom = 353.0
text = "Clear
"

[node name="btn_exit" type="Button" parent="."]
layout_mode = 0
offset_left = 37.0
offset_top = 371.0
offset_right = 297.0
offset_bottom = 476.0
text = "Exit
"

[connection signal="pressed" from="btn_calc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btn_exit" to="." method="_on_btn_exit_pressed"]
